tests/samples/invalid/pointer_to_const.pn
const C: u8 = 200;

fn foo(x: &&u8)
{
	// This should not be allowed because pointees are mutable.
	&x = &C;
}

fn main() -> u8
{
	var a: u8 = 17;
	var x: &u8 = &a;
	foo(&&x);
	return: x
}
